--- a/firstpage.html
+++ b/firstpage.html
@@ -23,5 +23,18 @@ document.getElementById("demo").innerHTML =
 "The value of z is " + z + ".";  
 </script>
 
+<button type="button" onclick="myFunction()">Click Me!</button>
+
+<p id="demo1"></p>
+<p id="demo2"></p>
+
+<script>
+function myFunction() {
+  document.getElementById("demo1").innerHTML = "Hello Dolly!";
+  document.getElementById("demo2").innerHTML = "How are you?";
+}
+</script>
+
+
 </body>
 </html> 
