--- a/firstpage.html
+++ b/firstpage.html
@@ -1,1 +1,11 @@
-this is my very 1st
+<!DOCTYPE html>
+<html>
+<body>
+
+<h2>My First Web Page</h2>
+<p>My first paragraph.</p>
+
+<button type="button" onclick="document.write(5 + 6)">Try it</button>
+
+</body>
+</html> 
