--- a/The_add_Method.html
+++ b/The_add_Method.html
@@ -2,7 +2,7 @@
 <html>
 <body>
 <h2>JavaScript Sets</h2>
-<p>Add variables to a Set:</p>
+<p>Adding equal elements to a Set:</p>
 
 <p id="demo"></p>
 
@@ -10,15 +10,15 @@
 // Create a Set
 const letters = new Set();
 
-// Create Variables
-const a = "a";
-const b = "b";
-const c = "c";
-
-// Add the Variables to the Set
-letters.add(a);
-letters.add(b);
-letters.add(c);
+// Add values to the Set
+letters.add("a");
+letters.add("b");
+letters.add("c");
+letters.add("c");
+letters.add("c");
+letters.add("c");
+letters.add("c");
+letters.add("c");
 
 // Display set.size
 document.getElementById("demo").innerHTML = letters.size;
@@ -26,4 +26,3 @@ document.getElementById("demo").innerHTML = letters.size;
 
 </body>
 </html>
-                                              
